<resources>
    <string name="app_name">prog7313_poe_part2</string>
    <string name="no_account_sign_up_here">No Account? Sign up here</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="recent_activity">RECENT ACTIVITY</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="oct_01_2023">Oct 01, 2023</string>
    <string name="xlsx">XLSX</string>
    <string name="csv">CSV</string>
    <string name="pdf">PDF</string>
    <string name="xlsx1">XLSX</string>
    <string name="csv1">CSV</string>
    <string name="pdf1">PDF</string>
    <string name="standard_monthly_report">Standard Monthly Report</string>
    <string name="october_2023">October 2023</string>
    <string name="oct_31_2023">Oct 31, 2023</string>
    <string name="statements">Statements</string>
    <string name="formats">FORMATS:</string>
    <string name="time_period">TIME PERIOD</string>
    <string name="search">Search</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="closed_nav">Open Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="take_photo">Take Photo</string>
    <string name="enter_the_maximum_goal">Enter the maximum goal</string>
    <string name="enter_the_minimum_goal">Enter the minimum goal</string>
    <string name="goals">Goals</string>
    <string name="save">Save</string>
    <string name="create_new_account">create new account</string>
    <string name="budgetbee">budgetbee</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">register</string>
    <string name="profile_pic">profile_pic</string>
    <string name="already_have_an_account_click_here_to_login">already have an account click here to login</string>

    <string name="create_new_account">Create New Account</string>
    <string name="create_new">Create New</string>
    <string name="budgetbee">BudgetBee</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_click_here_to_login">Already have an account? Click here to login</string>

    <string name="welcome">Welcome!</string>
    <string name="search_transactions">Search Transactions</string>
    <string name="download_statement">Download Statement</string>
    <string name="expense_entry">Expense Entry</string>
    <string name="category_amounts">Category Amounts</string>
    <string name="progress_dashboard">Progress Dashboard</string>
    <string name="current_balance_123456_00">Current Balance 123456.00</string>
    <string name="logged_in_as_user">LOGGED IN AS: User</string>
    <string name="home">HOME</string>
    <string name="stats">STATS</string>
    <string name="add">Add</string>
    <string name="add_budget">ADD BUDGET</string>
    <string name="settings">SETTINGS</string>
    <string name="rewards">REWARDS</string>
    <string name="wallet">WALLET</string>
    <string name="statements_123">Statements</string>
    <string name="xlsx_89">XLSX</string>
    <string name="oct_01_2023_353">Oct 01, 2023</string>
    <string name="pdf_43">PDF</string>
    <string name="formats_43">FORMATS:</string>
    <string name="download_54">Download</string>
    <string name="download_42">Download</string>
    <string name="csv_54">.csv</string>
    <string name="docx_123">.docx</string>
    <string name="todo_123">TODO</string>
    <string name="todo_435">TODO</string>
    <string name="oct_31_2023_84">Oct 31, 2023</string>
    <string name="jpg_123">.jpg</string>
    <string name="august_2023_234">August 2023</string>
    <string name="xlsx_938">XLSX</string>
    <string name="todo_89">TODO</string>
    <string name="todo">TODO</string>
    <string name="csv_78">CSV</string>
    <string name="upload_external_docs_89">Upload External Docs</string>
    <string name="todo_97">TODO</string>
    <string name="pdf_78">.pdf</string>
    <string name="recent_activity_67">RECENT ACTIVITY</string>
    <string name="time_period_89">TIME PERIOD</string>
    <string name="october_2023_56">October 2023</string>
    <string name="standard_monthly_report_56">Standard Monthly Report</string>
    <string name="csv_8">CSV</string>
    <string name="todo_898">TODO</string>
    <string name="png_78">.png</string>
    <string name="sync_external_bank_statements_to_your_profile_for_unified_analysis_89">Sync external bank statements to your profile for unified analysis.</string>
    <string name="pdf_89">PDF</string>
    <string name="download_123">Download</string>
    <string name="september_2023_897">September 2023</string>
    <string name="standard_monthly_report_456">Standard Monthly Report</string>
    <string name="pdf_678">PDF</string>
    <string name="download_45">Download</string>
    <string name="todo_88">TODO</string>
    <string name="standard_monthly_report_89">Standard Monthly Report</string>
    <string name="pdf_899">PDF</string>
    <string name="todo_878">TODO</string>
    <string name="pdf_897">PDF</string>
    <string name="todo_456">TODO</string>
    <string name="todo_895">TODO</string>
    <string name="standard_monthly_report_345">Standard Monthly Report</string>
    <string name="july_2023_89">July 2023</string>
    <string name="csv_652">CSV</string>
    <string name="todo_9634">TODO</string>
    <string name="todo_35">TODO</string>
    <string name="todo_78">TODO</string>
</resources>